// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view 1`] = `
<div>
  <button
    disabled={false}
    onClick={[Function]}
  >
    Get color
  </button>
</div>
`;

exports[`view 2`] = `
<div>
  <button
    disabled={true}
    onClick={[Function]}
  >
    Loading...
  </button>
</div>
`;

exports[`view 3`] = `
<div>
  <p>
    red
  </p>
  <button
    disabled={false}
    onClick={[Function]}
  >
    Get color
  </button>
</div>
`;

exports[`view 4`] = `
<div>
  <p>
    red
  </p>
  <button
    disabled={true}
    onClick={[Function]}
  >
    Loading...
  </button>
</div>
`;
